update registrasi dan menambahkan tombol logout serta memperbaiki navbar

--- a/src/Registration.css
+++ b/src/Registration.css
@@ -111,3 +111,23 @@
     height: 40px;
     margin-right: 10px;
 }
+
+.login-link {
+    margin-top: 20px;
+    font-size: 0.9rem;
+    color: #333; 
+    text-align: center;
+  }
+  
+.login-link span {
+    color: #007bff; 
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    transition: color 0.3s ease, text-decoration 0.3s ease;
+}
+  
+.login-link span:hover {
+    color: #0056b3; 
+    text-decoration: underline;
+}
