--- a/src/pages/Kontak.css
+++ b/src/pages/Kontak.css
@@ -154,7 +154,7 @@ body {
     padding: 15px;
     font-size: 18px;
     border-radius: 5px;
-    background-color: #28a745;
+    background-color: #FF2929;
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     opacity: 1;
