update beberapa bagian login dan regis

--- a/src/Registration.css
+++ b/src/Registration.css
@@ -131,3 +131,10 @@
     color: #0056b3; 
     text-decoration: underline;
 }
+
+.error-message {
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 0.5rem;
+  }
+  
